Fixes images which are too big
Fixes https://github.com/joomla-extensions/install-from-web-server/issues/17

Moves https://github.com/joomla-extensions/install-from-web-server/pull/21 from server-side to client-side.

--- a/plugins/installer/webinstaller/css/client.css
+++ b/plugins/installer/webinstaller/css/client.css
@@ -196,6 +196,12 @@ div.item-description {
 
 }
 
+/* Fixes images which are too big */
+.com-apps-container .thumbnail .item-image img {
+	max-width: 100%;
+	max-height: 90%;
+}
+
 /* This is where the single column view starts */
 @media (max-width: 768px) {
     .com-apps-container select {
